--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+/* The emerging W3C standard that is currently Firefox-only */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0,128,0,0.3) transparent;
+}
+
+/* Works on Chrome/Edge/Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgba(0,128,0,0.3);
+  border-radius: 20px;
+}
+
+
